<resources>
    <string name="app_name">CashFlow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movimientos">Movimientos</string>
    <string name="title_usuarios">Usuarios</string>
    <string name="title_reportes">Reportes</string>
    <string name="title_registrar_movimientos">Registrar Movimientos</string>

    <string name="hint_correo">Correo</string>
    <string name="hint_contra">Contraseña</string>
    <string name="ingreso">ENTRAR</string>
    <string name="ingreso_google">O INGRESA CON TU CUENTA GOOGLE:</string>

    <string name="titulo_balance">BALANCE</string>
    <string name="titulo_upper_toolbar">REGISTRAR MOVIMIENTO</string>
    <string name="vermovimientos_mayuscula">VER MOVIMIENTOS</string>
    <string name="cuentas_mayuscula">CUENTAS:</string>

    <string name="hint_observaciones">Observaciones</string>
    <string name="hint_monto">Monto</string>
    <string name="hint_fecha">Seleccione la fecha</string>

    <string name="naturaleza">NATURALEZA:</string>
    <string name="departamento">DEPARTAMENTO:</string>
    <string name="caregoria">CATEGORIA:</string>
    <string name="concepto">CONCEPTO:</string>
</resources>