<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_usuarios">

    <fragment
        android:id="@+id/navigation_usuarios"
        android:name="com.example.cashflow.ui.usuarios.UsuariosFragment"
        android:label="@string/title_usuarios"
        tools:layout="@layout/fragment_usuarios" />

    <fragment
        android:id="@+id/navigation_movimientos"
        android:name="com.example.cashflow.ui.movimientos.MovimientosFragment"
        android:label="@string/title_movimientos"
        tools:layout="@layout/fragment_movimientos" />

    <fragment
        android:id="@+id/navigation_reportes"
        android:name="com.example.cashflow.ui.reportes.ReportesFragment"
        android:label="@string/title_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/navigation_registrar_movimientos"
        android:name="com.example.cashflow.ui.registrarmovimientos.RegistrarMovimientosFragment"
        android:label="@string/title_registrar_movimientos"
        tools:layout="@layout/fragment_registrar_movimientos" />



</navigation>