<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/negativo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/loginuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="30dp" />


    <EditText
        android:id="@+id/loginpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contra"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/loginuser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/loginSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingreso"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/loginpass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="30dp" />


    <TextView
        android:id="@+id/googleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingreso_google"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/loginSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/googleLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/google_logo"
        app:layout_constraintTop_toBottomOf="@id/googleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>