<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE6FF"
    tools:context=".ui.usuarios.UsuariosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="368dp"
            android:layout_height="127dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/negativo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView">

            <TextView
                android:id="@+id/balanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/titulo_balance"
                android:textColor="#6A1B9A"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/logoImageView" />

            <TextView
                android:id="@+id/balanceAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="1634.50 $"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/registerMovementButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#5C6BC0"
                android:text="@string/titulo_upper_toolbar"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/viewMovementButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EF5350"
                android:text="@string/vermovimientos_mayuscula"
                android:textColor="#FFFFFF" />

        </LinearLayout>


        <TextView
            android:id="@+id/accountsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cuentas_mayuscula"
            android:textColor="#6A1B9A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="338dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountsLabel">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/accountsLabel"
                tools:listitem="@layout/lista_cuenta_card" />


        </ScrollView>





    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>