<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE6FF"
    tools:context=".ui.registrarmovimientos.RegistrarMovimientosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registrar Movimiento"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/txtIngreso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ingreso" />

                        <RadioButton
                            android:id="@+id/txtEgreso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Egreso" />

                        <RadioButton
                            android:id="@+id/txtMovimiento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Movimientos" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider21"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginVertical="10dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#2905E8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txt_observaciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="#6E63C0"
                        android:drawableStart="@drawable/observarsmall"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_observaciones"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="#6E63C0" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="#6E63C0"
                        android:drawableStart="@drawable/montosmall"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_monto"
                        android:inputType="numberDecimal"
                        android:padding="12dp"
                        android:textColor="#6E63C0"
                        tools:inputType="number" />

                    <EditText
                        android:id="@+id/txt_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:clickable="false"
                        android:drawableStart="@drawable/entregasmall"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:hint="@string/hint_fecha"
                        android:padding="12dp" />

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginVertical="10dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#2905E8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    tools:layout_editor_absoluteX="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="Cuenta origen:"
                            android:textColor="@color/black" />

                        <Spinner

                            android:id="@+id/spCuenta_de_origen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="Cuenta destino:"
                            android:textColor="@color/black" />

                        <Spinner
                            android:id="@+id/spCuenta_de_destino"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>


                </LinearLayout>

                <View
                    android:id="@+id/dividerfocus"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginVertical="10dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#2905E8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/dividerfocus">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/naturaleza"
                        android:textColor="#6E63C0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/dividers"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />


                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <include layout="@layout/options_movimiento" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/departamento"
                        android:textColor="#6E63C0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider62"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <include layout="@layout/options_movimiento" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/caregoria"
                        android:textColor="#6E63C0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <include layout="@layout/options_movimiento" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/concepto"
                        android:textColor="#6E63C0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <include layout="@layout/options_movimiento" />


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6E63C0"
            android:text="GUARDAR"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</FrameLayout>